@@ -446,6 +446,12 @@ bool MainWindow::LoadMeasurements(const QString &path)
         return false;
     }
 
+    if (qApp->patternUnit() == Unit::Inch && m->Type() == MeasurementsType::Standard)
+    {
+        qWarning()<<tr("Gradation doesn't support inches");
+        return false;
+    }
+
     if (m->Type() == MeasurementsType::Standard)
     {
         m->SetDataSize();
