@@ -64,6 +64,7 @@
 - Called the main app in console mode doesn't show opening file error in some cases.
 - [#553] Tape.exe crash. Issue with the Search field.
 - [#569] Tape app. Options that open new file open new instance even if a user doesn't want this.
+- [#539] Infinite alert loop "Gradation doesn't support inches" when loading standard table.
 
 # Version 0.4.4 April 12, 2016
 - Updated measurement templates with all measurements. Added new template Aldrich/Women measurements.
